[package]
name = "sui-simulator"
version = "0.7.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
workspace-hack.workspace = true
sui-framework = { path = "../sui-framework" }
sui-types = { path = "../sui-types" }
telemetry-subscribers.workspace = true
tracing = "0.1"
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "302ff6f98fffa30a3a18e919766cd63f5b4c5aa8" }
fastcrypto = "0.1.2"

[target.'cfg(msim)'.dependencies]
msim = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "305f0ca15fe77df5b92b7f4bb57b5472e568edc3", package = "msim" }
