[package]
name = "sui-simulator"
version = "0.7.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
workspace-hack.workspace = true
sui-framework = { path = "../sui-framework" }
sui-types = { path = "../sui-types" }
telemetry-subscribers.workspace = true
tracing = "0.1"
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "302ff6f98fffa30a3a18e919766cd63f5b4c5aa8" }
fastcrypto = "0.1.2"

[target.'cfg(msim)'.dependencies]
msim = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "8289a5ed586d91fcd5930539d3b526b99d5223ca", package = "msim" }
